...
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_car_black_24dp"
        android:title="My Trips"/>

    <item
        android:id="@+id/nav_maps"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="Plan My Trip" />

    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_timer_black_24dp"
        android:title="Proposed Trips" />

</menu>
