...
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:hint="Arrival Date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/arrivalDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="(DD/MM/YYYY)"
                android:inputType="date"
                android:textAlignment="center"
                android:focusableInTouchMode="false"
...
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:hint="Arrival Time">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/arrivalTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="(HH:MM)"
                android:inputType="time"
                android:textAlignment="center"
                android:focusableInTouchMode="false"
...
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/colorAccent"
            android:text="Set Origin" />

        <Button
            android:id="@+id/To"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/colorAccent"
            android:text="Find Route" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
